# GB_SpriteBuilder

./: .gitignore  CMakeLists.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
SpriteBuilderExe/: CMakeLists.txt
SpriteBuilderExe/source/: main.cpp
SpriteBuilderLib/: CMakeLists.txt
SpriteBuilderLib/include/: SpriteBuilder.h
SpriteBuilderLib/include/SpriteBuilder/Core/: AnimationRegion.h  EventController.h  StartupRegion.h  TemplateRegion.h
SpriteBuilderLib/include/SpriteBuilder/Utils/: DllUtils.h
SpriteBuilderLib/source/: SpriteBuilder.cpp
SpriteBuilderLib/source/Core/: AnimationRegion.cpp  EventController.cpp  StartupRegion.cpp  TemplateRegion.cpp
